Atualização de projetos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
 
-    <title>Leticia Harumi │ Portfólio de Arquitetura</title>
+    <title>Leticia Harumi │ Portfólio</title>
     <link rel="shortcut icon" href="./assets/img/imagem-logo.png">
 
 </head>
@@ -28,7 +28,7 @@
                     <li><a href="https://github.com/leticiaharumi" target="_blank"><i class="ri-github-fill"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/leticiauemura" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
                     <li><a href="https://instagram.com/lehuemura" target="_blank"><i class="ri-instagram-line"></i></a></li>
-                    <li><a href="https://links-leticiaharumi.netlify.app/"><i class="ri-links-line"></i></a></li>
+                    <li><a href="https://links-leticiaharumi.netlify.app/"><i class="ri-links-line" target="_blank"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -274,7 +274,7 @@
                         <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                             <section>
                                 <h3 class="ds-projetos-titulo"> Arquitetura</h3>
-                                <a href="./assets/works-details/dorm-inf.html" class="ds-button">Ver Projetos</a>
+                                <a href="./proj-arquitetura.html" class="ds-button">Ver Projetos</a>
                             </section>
                         </div>
                     </div>
