Adicionando atividade extracurricular

--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
                         <span class="ds-ano">2022</span>
+                        <h3 class="ds-cursoat">Fundamentos do design da experiência do usuário (UX)</h3>
+                        <span class="ds-escola">Coursera</span>
+                    </section>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-ano">2022</span>
                         <h3 class="ds-cursoat">Linguagem Python: Aprendendo a Linguagem</h3>
                         <span class="ds-escola">Ocean - Samsung (Carga Horária: 9h)</span>
                     </section>
