--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <a href="index.html" class="ds-logo">
                     <span>L</span> Leticia Harumi
                 </a>
+                <div class="theme-switch">
+                    <div class="switch"></div>
+                </div>
                 <ul class="ds-redes">
                     <li><a href="https://github.com/leticiaharumi" target="_blank"><i class="ri-github-fill"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/leticiauemura" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
@@ -46,7 +49,7 @@
                 <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                     <section>
                         <h1>
-                         Análise e Desenvolvimento de Sistemas │ Arquitetura e Urbanismo.
+                         Arquitetura e Urbanismo.
                         </h1>
                     </section>
                 </div>
@@ -59,7 +62,7 @@
         <div class="container">
             <section>
                 <h2 class="ds-titulo">Sobre Mim</h2>
-                <p>Me chamo Leticia, mas podem me chamar de Lê ou Haru. Tenho 30 anos e moro em São Paulo/SP. Formada em Arquitetura e Urbanismo (2017) resolvi, durante a pandemia, me aventurar em uma área nova! Atualmente estou cursando Análise e Desenvolvimento de Sistemas e, me encontro como iniciante no universo da programação!</p>
+                <p>Leticia Harumi Uemura - Arquiteta e Urbanista, formada pela Faculdades Metropolitanas Unidas (FMU - FIAM/ FAAM) no ano de 2017. Possui experiência na elaboração de projetos hidráulicos desenvolvidos no AutoCAD (plantas, cortes, elevações e detalhamentos). E também, experiência no desenvolvimento de projetos arquitetônicos e de interiores (plantas, cortes, elevações, detalhamentos), desenvolvimento de maquetes eletrônicas e auxilio no desenvolvimento de projetos acadêmicos (diagramação de pranchas, imagens 3D renderizadas).</p>
             </section>
         </div>
     </div>
@@ -71,7 +74,7 @@
             <div class="row ds-formacao-lista">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
-                        <span class="ds-ano">01/2021 - Atual</span>
+                        <span class="ds-ano">01/2021 - 12/2022</span>
                         <h3 class="ds-universidade">Faculdade Anhanguera</h3>
                         <span class="ds-curso">Tecnólogo em Analise e Desenvolvimento de Sistemas (São Paulo - SP)</span> 
                     </section>
@@ -143,96 +146,18 @@
             <div class="row ds-atividades-lista">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Web Scraping com Python</h3>
-                        <span class="ds-escola">Ocean - Samsung (Carga Horária: 6h)</span>
+                        <span class="ds-ano">2011</span>
+                        <h3 class="ds-cursoat">Autocad 2D, 3D e Recursos Adicionais</h3>
+                        <span class="ds-escola">SENAC São Paulo</span>
                     </section>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Fundamentos do design da experiência do usuário (UX)</h3>
-                        <span class="ds-escola">Coursera</span>
+                        <span class="ds-ano">2017</span>
+                        <h3 class="ds-cursoat">SketchUP</h3>
+                        <span class="ds-escola">BM Maquetes</span>
                     </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Linguagem Python: Aprendendo a Linguagem</h3>
-                        <span class="ds-escola">Ocean - Samsung (Carga Horária: 9h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Programando para web com Python, CSS e HTML</h3>
-                        <span class="ds-escola">Ocean - Samsung (Carga Horária: 12h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Desenvolvimento Ágil - DevOps Git </h3>
-                        <span class="ds-escola">Ocean - Samsung (Carga Horária: 3h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Introdução ao Git e ao GitHub</h3>
-                        <span class="ds-escola">Digital Innovation One (Carga Horária: 5h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Evento BKB Code - Html, CSS, JS</h3>
-                        <span class="ds-escola">Kenzie Academy (Carga Horária: 30h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Spring React - HTML e CSS</h3>
-                        <span class="ds-escola">DevSuperior (Carga Horária: 16h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Minicurso de Design UX/UI</h3>
-                        <span class="ds-escola">Cubos Academy  (Carga Horária: 6h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Workshop - UX/UI na prática</h3>
-                        <span class="ds-escola">Jeff Albuquerque (Carga Horária: 12h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2022</span>
-                        <h3 class="ds-cursoat">Prototipação no-code de soluções digitais</h3>
-                        <span class="ds-escola">Ocean - Samsung (Carga Horária: 6h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2021</span>
-                        <h3 class="ds-cursoat">Lógica de Programação</h3>
-                        <span class="ds-escola">SENAC São Paulo (Carga Horária: 40h)</span>
-                    </section>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <section>
-                        <span class="ds-ano">2021</span>
-                        <h3 class="ds-cursoat">Técnologias de Segurança de Redes</h3>
-                        <span class="ds-escola">SENAC São Paulo (Carga Horária: 72h)</span>
-                    </section>
-                </div>
-                
+                </div>                
             </div>
         </div>
     </div>
