--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
             <section>
                 <h2 class="ds-titulo">Sobre Mim</h2>
-                <p>Leticia Harumi Uemura - Arquiteta e Urbanista, formada pela Faculdades Metropolitanas Unidas (FMU - FIAM/ FAAM) no ano de 2017. Possui experiência na elaboração de projetos hidráulicos desenvolvidos no AutoCAD (plantas, cortes, elevações e detalhamentos). E também, experiência no desenvolvimento de projetos arquitetônicos e de interiores (plantas, cortes, elevações, detalhamentos), desenvolvimento de maquetes eletrônicas e auxilio no desenvolvimento de projetos acadêmicos (diagramação de pranchas, imagens 3D renderizadas).</p>
+                <p>Leticia Harumi Uemura - Arquitetura e Urbanismo, formada pela Faculdades Metropolitanas Unidas (FMU - FIAM/ FAAM) no ano de 2017. Possui experiência na elaboração de projetos hidráulicos desenvolvidos no AutoCAD (plantas, cortes, elevações e detalhamentos). E também, experiência no desenvolvimento de projetos arquitetônicos e de interiores (plantas, cortes, elevações, detalhamentos), desenvolvimento de maquetes eletrônicas e auxilio no desenvolvimento de projetos acadêmicos (diagramação de pranchas, imagens 3D renderizadas).</p>
             </section>
         </div>
     </div>
@@ -101,7 +101,7 @@
                         <h3 class="ds-escritorio">Autônomo</h3>
                         <span class="ds-cargo">Arquiteto Projetista</span>
                         <p>
-                            Auxilio no desenvolvimento de projetos acadêmicos; desenvolvimento de projetos arquitetônicos e projetos de interiores; diagramação de pranchas; desenvolvimento de imagens 3D renderizadas.
+                            Durante este período, dediquei-me ao desenvolvimento de projetos arquitetônicos e de interiores, oferecendo também suporte na elaboração de projetos acadêmicos. Além disso, realizei a diagramação de pranchas e criei imagens 3D renderizadas para uma apresentação visual impactante.
                         </p>
                     </section>
                 </div>
@@ -111,7 +111,7 @@
                         <h3 class="ds-escritorio">GRUU Arquitetura</h3>
                         <span class="ds-cargo">Projetista de Arquitetura - Temporário</span>
                         <p>
-                            Levantamento arquitetônico; desenvolvimento de projetos de arquitetura e interiores; elaboração de imagens 3D renderizadas, desenhos pré-executivos, executivos e detalhamentos para obra; acompanhamento de obra e atendimento ao cliente.
+                            Atuei na realização de levantamentos arquitetônicos e no desenvolvimento de projetos de arquitetura e interiores, abrangendo os setores comercial, residencial e corporativo. Fui responsável pela elaboração de renderizações 3D, assim como pelos desenhos pré-executivos, executivos e detalhamentos para a execução da obra. Além disso, participei do acompanhamento da obra e do atendimento ao cliente.
                         </p>
                     </section>
                 </div>
@@ -121,7 +121,7 @@
                         <h3 class="ds-escritorio">Jéssica Castro - Design de Interiores</h3>
                         <span class="ds-cargo">Auxiliar de Projetos</span>
                         <p>
-                            Auxiliar no desenvolvimento de projetos de interiores: envolvimento desde a elaboração de estudos preliminares, desenvolvimento de imagens 3D renderizadas (SketchUp + Vray), desenhos pré-executivo e executivo com detalhamentos para obra.
+                            Contribuí ativamente no desenvolvimento de projetos de design de interiores, engajando desde a fase de elaboração de estudos preliminares até a criação de imagens 3D renderizadas (utilizando SketchUp + Vray) e desenhos pré-executivos e executivos com detalhamentos para a obra.
                         </p>
                     </section>
                 </div>
@@ -131,7 +131,18 @@
                         <h3 class="ds-escritorio">CRIARQ Projetos e Gerenciamento LTDA.</h3>
                         <span class="ds-cargo">Estagiário</span>
                         <p>
-                            Auxiliar na elaboração de projetos de instalações hidráulicas realizadas no AutoCAD; elaboração de projeto de segurança contra incêndio para aprovação do Bombeiro; compatibilização de projetos (estrutura, arquitetura e ar-condicionado).
+                            Colaborava ativamente na criação de projetos de instalações hidráulicas no AutoCAD, abrangendo plantas, cortes, elevações e detalhamentos. Além disso, era responsável pela elaboração de projetos de segurança contra incêndio, visando à aprovação junto ao Corpo de Bombeiros, e pela compatibilização de diversos projetos, incluindo estrutura, arquitetura e sistema de ar-condicionado.
+                        </p>
+                    </section>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                    <section>
+                        <span class="ds-ano">03/2012 - 12/2013</span>
+                        <h3 class="ds-escritorio">J.F.L. COMERCIO DE VESTUARIO LTDA.</h3>
+                        <span class="ds-cargo">Vendedora</span>
+                        <p>
+                            Durante quase dois anos, tive o privilégio de atuar como vendedora na J.F.L. COMÉRCIO DE VESTUÁRIO LTDA, uma renomada loja de moda feminina localizada no Shopping Pátio Paulista. Nesse período, desenvolvi e aprimorei minhas habilidades em vendas, proporcionando um atendimento personalizado e eficiente às clientes.
+                            Além de oferecer um excelente serviço ao cliente, fui responsável por manter o ambiente da loja organizado e esteticamente atraente, contribuindo para a experiência de compra positiva das clientes. Minha dedicação e paixão pelo universo da moda me permitiram estar sempre atualizada sobre as últimas tendências, o que foi fundamental para ajudar as clientes a encontrar as peças perfeitas para seu estilo.
                         </p>
                     </section>
                 </div>
