--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
                     <section>
                         <span class="ds-ano">01/2018 - Atual</span>
                         <h3 class="ds-escritorio">Autônomo</h3>
-                        <span class="ds-cargo">Arquiteto Projetista</span>
+                        <span class="ds-cargo">Desenhista Projetista</span>
                         <p>
-                            Durante este período, dediquei-me ao desenvolvimento de projetos arquitetônicos e de interiores, oferecendo também suporte na elaboração de projetos acadêmicos. Além disso, realizei a diagramação de pranchas e criei imagens 3D renderizadas para uma apresentação visual impactante.
+                            Durante esse período, auxiliei no desenvolvimento de projetos residenciais e de design de interiores, otimizando layouts e explorando a integração de ambientes para atender às necessidades dos clientes. Orientei alunos na elaboração de projetos completos, desde a pesquisa conceitual até a apresentação final.
+Além disso, utilizei softwares como AutoCAD e Photoshop para a diagramação profissional de pranchas, garantindo clareza, precisão e estética; e produzi imagens 3D fotorrealistas utilizando o V-Ray, para projetos residenciais, comerciais e coorporativos, proporcionando aos clientes uma visualização completa e imersiva dos espaços.
                         </p>
                     </section>
                 </div>
