--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@ Além disso, utilizei softwares como AutoCAD e Photoshop para a diagramação pr
                         <h3 class="ds-escritorio">GRUU Arquitetura</h3>
                         <span class="ds-cargo">Projetista de Arquitetura - Temporário</span>
                         <p>
-                            Atuei na realização de levantamentos arquitetônicos e no desenvolvimento de projetos de arquitetura e interiores, abrangendo os setores comercial, residencial e corporativo. Fui responsável pela elaboração de renderizações 3D, assim como pelos desenhos pré-executivos, executivos e detalhamentos para a execução da obra. Além disso, participei do acompanhamento da obra e do atendimento ao cliente.
+                            Realizei levantamento arquitetônico detalhado de imóveis nos setores comercial, residencial e corporativo, garantindo precisão nas medidas e informações para a elaboração de projetos impecáveis.
+Criei projetos de arquitetura e interiores, desde o conceito inicial até a entrega final, para clientes residenciais, comerciais e corporativos, atendendo às suas necessidades e expectativas de forma personalizada.
+Produzi renderizações 3D fotorrealistas utilizando softwares como SketchUP e V-Ray, para visualizar os projetos com clareza e realismo, permitindo aos clientes uma imersão completa nos espaços antes da construção.
+Elaborei desenhos técnicos precisos e detalhados em AutoCAD, incluindo plantas, cortes, elevações e detalhamentos, garantindo a viabilidade técnica.
                         </p>
                     </section>
                 </div>
@@ -122,7 +125,9 @@ Além disso, utilizei softwares como AutoCAD e Photoshop para a diagramação pr
                         <h3 class="ds-escritorio">Jéssica Castro - Design de Interiores</h3>
                         <span class="ds-cargo">Auxiliar de Projetos</span>
                         <p>
-                            Contribuí ativamente no desenvolvimento de projetos de design de interiores, engajando desde a fase de elaboração de estudos preliminares até a criação de imagens 3D renderizadas (utilizando SketchUp + Vray) e desenhos pré-executivos e executivos com detalhamentos para a obra.
+                            Participei ativamente em todas as etapas de projetos de design de interiores, desde a fase inicial de estudos preliminares até a entrega final, garantindo um processo coeso e resultados excepcionais.
+Criei imagens 3D fotorrealistas utilizando SketchUp e V-Ray, proporcionando aos clientes uma visualização completa e imersiva dos ambientes projetados, antes mesmo da construção, facilitando a tomada de decisões e garantindo a sua satisfação.
+Elaborei desenhos técnicos precisos e detalhados em AutoCAD, garantindo a viabilidade da obra.
                         </p>
                     </section>
                 </div>
@@ -132,7 +137,10 @@ Além disso, utilizei softwares como AutoCAD e Photoshop para a diagramação pr
                         <h3 class="ds-escritorio">CRIARQ Projetos e Gerenciamento LTDA.</h3>
                         <span class="ds-cargo">Estagiário</span>
                         <p>
-                            Colaborava ativamente na criação de projetos de instalações hidráulicas no AutoCAD, abrangendo plantas, cortes, elevações e detalhamentos. Além disso, era responsável pela elaboração de projetos de segurança contra incêndio, visando à aprovação junto ao Corpo de Bombeiros, e pela compatibilização de diversos projetos, incluindo estrutura, arquitetura e sistema de ar-condicionado.
+                            Criei projetos detalhados de instalações hidráulicas utilizando AutoCAD, incluindo plantas, cortes, elevações e detalhamentos, garantindo a precisão, a funcionalidade e a estética dos projetos.
+Domínio das diversas etapas de projetos de instalações hidráulicas, desde a concepção inicial até a entrega final, abrangendo plantas baixas, cortes longitudinais e transversais, elevações, detalhamentos de tubulações, conexões e equipamentos, garantindo a fluidez do sistema e o atendimento às normas técnicas.
+Elaborei projetos de segurança contra incêndio em conformidade com as exigências do Corpo de Bombeiros, incluindo sinalização de segurança e rotas de fuga, garantindo a segurança dos ocupantes e a aprovação rápida dos projetos.
+Realizei a compatibilização de projetos de instalações hidráulicas com projetos de estrutura, arquitetura e sistema de ar-condicionado, evitando conflitos entre os sistemas, otimizando o tempo de execução da obra.
                         </p>
                     </section>
                 </div>
